update to new codebase

--- a/src/main/webapp/app/entities/userGateway/user-account/user-account-detail.component.html
+++ b/src/main/webapp/app/entities/userGateway/user-account/user-account-detail.component.html
@@ -8,9 +8,9 @@
             <jhi-alert-error></jhi-alert-error>
 
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="userGatewayApp.userGatewayUserAccount.fieldName">Field Name</span></dt>
+                <dt><span jhiTranslate="userGatewayApp.userGatewayUserAccount.owner">Owner</span></dt>
                 <dd>
-                    <span>{{ userAccount.fieldName }}</span>
+                    <span>{{ userAccount.owner }}</span>
                 </dd>
                 <dt><span jhiTranslate="userGatewayApp.userGatewayUserAccount.keyCollection">Key Collection</span></dt>
                 <dd>
