--- a/src/main/webapp/app/entities/userGateway/user-account/user-account-update.component.html
+++ b/src/main/webapp/app/entities/userGateway/user-account/user-account-update.component.html
@@ -12,9 +12,15 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="userGatewayApp.userGatewayUserAccount.fieldName" for="field_fieldName">Field Name</label>
-                    <input type="text" class="form-control" name="fieldName" id="field_fieldName"
-                           formControlName="fieldName"/>
+                    <label class="form-control-label" jhiTranslate="userGatewayApp.userGatewayUserAccount.owner" for="field_owner">Owner</label>
+                    <input type="text" class="form-control" name="owner" id="field_owner"
+                           formControlName="owner"/>
+                    <div *ngIf="editForm.get('owner')!.invalid && (editForm.get('owner')!.dirty || editForm.get('owner')!.touched)">
+                        <small class="form-text text-danger"
+                               *ngIf="editForm.get('owner')?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
